Fix wrap-guide width for Atom

--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -14,7 +14,7 @@ atom-text-editor::shadow {
     background: rgba(0, 100, 100, 0.5) !important;
   }
   .wrap-guide {
-    width: .5em;
+    width: .2em;
   }
   .indent-guide:first-child {
     box-shadow: none;
